--- a/css/contact_overlay.css
+++ b/css/contact_overlay.css
@@ -1,6 +1,6 @@
 .overlay-content-container {
     position: absolute;
-    z-index: 100;
+    z-index: 10000;
     width: 100%;
     height: 100vh;
     background-color: #2a364780;
