--- a/css/navbar.css
+++ b/css/navbar.css
@@ -14,6 +14,7 @@
     align-self: center;
     width: 100.03px;
     height: 121.97px;
+    margin-bottom: 40px;
 }
 
 .sidebar__menu {
