--- a/css/scrollbars.css
+++ b/css/scrollbars.css
@@ -1,5 +1,6 @@
 /* SCROLLBARS */
 
+main::-webkit-scrollbar,
 .main::-webkit-scrollbar,
 .form__wrapper-list::-webkit-scrollbar,
 .form__textarea::-webkit-scrollbar,
@@ -16,6 +17,7 @@
   width: 6px;
 }
 
+main::-webkit-scrollbar-thumb,
 .main::-webkit-scrollbar-thumb,
 .form__wrapper-list::-webkit-scrollbar-thumb,
 .form__textarea::-webkit-scrollbar-thumb,
@@ -32,6 +34,7 @@
   border-radius: 4px;
 }
 
+.main::-webkit-scrollbar-track,
 .main::-webkit-scrollbar-track,
 .form__wrapper-list::-webkit-scrollbar-track,
 .form__textarea::-webkit-scrollbar-track,
@@ -94,4 +97,7 @@
     display: none;
   }
 }
-    
+
+.d_none {
+    display: none;
+}
